Changelog
=========

1.1 -
-----

* Fixed: crash when viewing a simpleTask without body text, missing define is_editable.

1.0 - Unreleased
----------------

* Initial release
