@@ -8,5 +8,6 @@
 *.fs
 *.fs.*
 *.log
+*.mo
 passwd
 data
