@@ -4,7 +4,7 @@
       xmlns:i18n="http://xml.zope.org/namespaces/i18n"
       lang="en"
       metal:use-macro="here/main_template/macros/master"
-      i18n:domain="simpleTask">
+      i18n:domain="upcnet.simpleTask">
 
 <body>
 
