@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <object name="simpleTask"
         meta_type="Factory-based Type Information with dynamic views"
-        i18n:domain="plone" xmlns:i18n="http://xml.zope.org/namespaces/i18n">   
+        i18n:domain="upcnet.simpleTask" xmlns:i18n="http://xml.zope.org/namespaces/i18n">   
  <property name="title" i18n:translate="">simpleTask</property>
  <property name="description" i18n:translate="">A very simple task type.</property>
  <property name="content_icon">simpleTask.png</property>
